# BeyondCloud

./: .gitignore  .gitlab-ci.yml  LICENSE  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  advanced.md  azure-pipelines.yml  buildspec.yml  forchatgpt.md  future_enhancements.md
.agent/: RULES.md
.github/workflows/: ci.yml
agent-daemon/: .env.example  README.md  agent.py  agent_daemon.py  cli.py  custom_agents.py  pyproject.toml  requirements.txt
backend-nodejs/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
backend-nodejs/docs/: AGENT_CONTRACT.md  RAG_CONTRACT.md  api-contract.md
backend-nodejs/src/: config.ts  index.ts  otel-config.ts  secrets.ts  tracing.ts
backend-python/: .env.example  README.md  alembic.ini  gunicorn.conf.py  main.py  requirements.txt
backend-python/alembic/: env.py
backend-python/app/: auth.py  config.py  database.py  db_log_handler.py  (+9 more)
docs/: AGENT_CONTRACT.md  AGENT_EXPANSION_ROADMAP.md  API_OVERVIEW.md  COMMERCIAL_STRATEGY.md  COMPETITIVE_ANALYSIS.md  CONTRACT.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  ENTERPRISE_ROADMAP.md  FUTURE_ISSUE_TRACKER.md  LANGCHAIN_DEFENSE.md  PHASES.md  PRODUCT_OVERVIEW.md  RAG_CONTRACT.md  RBAC_CONTRACT.md  README.md  REMOVING_DEXIE.md  ROADMAP_EXTENSIONS.md  api-contract.md  codebase_review.md  component-architecture.md  implementation_plan.md  multi-backend-pros-cons.md  task.md  webui-info.md
frontend/: MODIFICATIONS.md  errors  package-lock.json  package.json  svelte.config.js  vite.config.ts
k8s/: Chart.yaml  values.yaml
prompts/: README.md
(+161 files in other folders)
